--- a/SchoolMgmt/pom.xml
+++ b/SchoolMgmt/pom.xml
@@ -132,6 +132,20 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
 		</dependency>
+		
+<!-- 	<dependency> -->
+<!--       <groupId>org.apache.maven.plugins</groupId> -->
+<!--       <artifactId>maven-war-plugin</artifactId> -->
+<!--       <version>3.0.0</version> -->
+<!--       <type>maven-plugin</type> -->
+<!--     </dependency> -->
+    
+<!--      <dependency> -->
+<!--       <groupId>org.apache.maven.plugins</groupId> -->
+<!--       <artifactId>maven-compiler-plugin</artifactId> -->
+<!--       <version>3.6.1</version> -->
+<!--       <type>maven-plugin</type> -->
+<!--     </dependency> -->
 
 	</dependencies>
 	<build>
